--- a/guide/README.org
+++ b/guide/README.org
@@ -143,7 +143,7 @@
     [[teensy-1.jpg]]
 
     The two 2.2kΩ (Red Red Red Gold) pull-up resistors ensure the switches give a clear reading when open.
-    [Read more about pull-up resistors here](https://learn.sparkfun.com/tutorials/pull-up-resistors).
+    [[https://learn.sparkfun.com/tutorials/pull-up-resistors][Read more about pull-up resistors here]].
 
     [[teensy-2-fuxor-reziztorrs.jpg]]
 
